maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:32: error: type mismatch;
 found   : List[Int]
 required: scala.collection.immutable.Nil.type
  listeX = x :: listeX
             ^ShortestPathMaze:33: error: type mismatch;
 found   : List[Int]
 required: scala.collection.immutable.Nil.type
  listeY=y::listeY
          ^ShortestPathMaze:51: error: not found: value lX
  var x=lX(j)
        ^ShortestPathMaze:52: error: not found: value lY
  var y=lY(j)
        ^