maze.shortestpath.ShortestPathMaze.scala.code
var biscuitX=0
var biscuitY=0
var c=0
var listeX=Nil
var listeY=Nil

override def run() {
	trouveSortie()
  marque()
}

def trouveSortie(){
  var i=0
  var j=0
  for(i <- 0 to getMondeLargeur()-1){
    for(j <- 0 to getMondeHauteur()-1){
      if(aBiscuit(i,j)){
        biscuitX=i
        biscuitY=j
      }
    }
  } 
}

def marque(){
  var x=biscuitX
  var y=biscuitY
  var i=0
  var j=0
  var possible=true
  listeX = x :: listeX
  listeY=y::listeY
  while(possible==true){
    for(i <- 0 to listeX.length-1){
      setIndication(listeX(i),listeY(i),c)
    }
    var lX=listeX
    var lY=listeY
    listeX=Nil
    listeY=Nil
    for(j <- 0 to lX.length){
      possible=pos(j)
    }
    c+=1
  }
  
}

def pos(j:Int): Boolean ={
  var x=lX(j)
  var y=lY(j)
  var test=false
  if(y!=0 && aMurNord(x,y)==false){
    listeX=x::listeX
    listeY=y-1::listeY
    test=true
  }
  if(x!=0 && aMurOuest(x,y)==false){
    listeX=x-1::listeX
    listeY=y::listeY
    test=true
  }
  if(y!=getMondeHauteur()-1 && aMurNord(x,y-1)){
    listeX=x::listeX
    listeY=y+1::listeY
    test=true
  }
  if(x!=getMondeLargeur()-1 && aMurOuest(x+1,y)){
    listeX=x+1::listeX
    listeY=y::listeY
    test=true
  }
  return test
}








